Fix z-index of modal.

--- a/src/sass/_overlay.scss
+++ b/src/sass/_overlay.scss
@@ -1,5 +1,6 @@
 .overlay {
     &__modal {
+      z-index: 2;
         position: fixed;
         top: 0;
         right: 0;
